# django-attachments

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.rst  pyproject.toml  setup.py
django_attachments/: CHANGELOG.md  __init__.py  admin.py  apps.py  cleanup.py  fields.py  forms.py  models.py  tests.py  utils.py  views.py  widgets.py
django_attachments/locale/sk_SK/LC_MESSAGES/: django.mo  django.po
django_attachments/migrations/: 0001_initial.py  0002_auto_20180727_0804.py  0003_attachment_options.py  0004_rename_attachment_library_rank_django_atta_library_9d0164_idx.py
django_attachments/static/django_attachments/css/: attachments.css
django_attachments/static/django_attachments/img/: .gitattributes
django_attachments/static/django_attachments/js/: admin_attachments.js  attachments.js
django_attachments/templates/admin/attachments/: library_create.html  library_edit.html
django_attachments/templates/django_attachments/widgets/: admin_attachments.html
sample_project/: requirements.txt
sample_project/example/: __init__.py  admin.py  admin_forms.py  apps.py  models.py  views.py
sample_project/example/migrations/: 0001_initial.py
sample_project/templates/: base.html  editable_attachments.html  gallery_upload.html  index.html  live_upload_attachments.html  on_save_upload_attachments.html
sample_project/web/: settings.py  settings_local.py  urls.py  wsgi_werkzeug.py
